--- a/6.1-homework.md
+++ b/6.1-homework.md
@@ -25,8 +25,36 @@ key-value. Простая структура данных, быстрый пои
 Нет свойства A, т.е. CP.
 Т.к. сбрасывает соединение, вероятно EC, т.к. предпочитает свалиться, а не ждать возможности синхронизации.
 
+> Задание 2
+> Предлагаю для начала ознакомиться с материалами:
+> ...
+> Если это не поможет, будем разбираться детальнее. Что я вижу - вы не совсем правильно понимаете сами состояния системы.
+
+Я написал во всех обсуждениях и чатиках, где мог, но разъяснений так и не получил. Поэтому детальнее опишу свою логику. Если она ошибочна, укажите, где я ошибаюсь.
+Свойства Consistency, Availability, Partitioning tolerance означают, вкратце, следующее:
+- Consistency - все пользователи системы "видят" одинаковый набор данных
+- Availabilty - все пользователи системы могут успешно выполнять запросы к системе (например, чтение, запись) и получать корректный отклик
+- Partitioning Tolerance - система продолжает работу при сетевых изоляциях её компонентов друг от друга<br>
+С этой точки зрения:
+- Данные записываются на все узлы с задержкой до часа (асинхронная запись)<br>
+Я это понимаю как на одни узлы записывается быстро, на другие дольше, и в целом все узлы получают одинаковые данные с задержкой до часа. Т.е. по прошествии, например, 5 минут после записи на разных узлах могут быть разные данные - запись ещё не доехала. Поэтому нет свойства C.
+- При сетевых сбоях, система может разделиться на 2 раздельных кластера<br>
+Разделиться на 2 раздельных кластера - я это понимаю как разделиться на два раздельных работоспособных кластера. Если обе части системы работоспособны и продолжают работать, значит есть свойство P. Если оба кластера корректно обрабатывают любые запросы, значит имеется свойство A. Но при этом, т.к. одни клиенты пишут в один кластер, а другие в другой, то не будет Consistency. Если же система понимает, что её партиционировали, и, например, не будет разрешать запись в один из кластеров, то это будет свойство C, но не будет A.
+- Система может не прислать корректный ответ или сбросить соединение<br>
+По определению если система иногда даёт некорректный ответ, значит она не обладает свойством A.
+
+
 ## 3
 Смотря, что называть системой. В одной СУБД, насколько я понимаю, нет. Если под системой понимать какой-то комплекс, решающий определённую задачу, то, конечно, да. Например, если в системе есть финансовые транзакции, их лучше хранить в реляционной СУБД для гарантированного обеспечения консистентности и транзакционной целостности (ACID). При этом другие данные, например, история взаимодействия с пользователем, какие-то параметры пользовательского интерфейса лучше хранить в СУБД класса BASE.
 
 ## 4
 Это Redis. Основной недостаток: этап динамичного развития ещё не пройден, может быть недостаточно надёжным. 
+
+> Задание 4
+> Что такое этап динамического развития? Разве у этой системы нет явных ограничений и недостатков?
+Этап динамического развития - я имел ввиду этап активной разработки, наличие большого community, готового разрабатывать новые фичи и исправлять ошибки.
+Основные ограничения Redis как pub/sub системы:
+- нет возможности гарантированной доставки сообщений
+- оптимизирован для быстрой доставки сообщений небольшому числу подписчиков
+- redis хранит сообщения только в памяти, т.е. в случае отказа узла кластера все недоставленные сообщения теряются
+- ограниченные возможности групповой доставки сообщений
