--- a/6.6-homework.md
+++ b/6.6-homework.md
@@ -17,3 +17,7 @@ db.killOp("OPID")
 CONFIG SET ACTIVE_EXPIRE_CYCLE_LOOKUPS_PER_LOOP 30
 
 ## 3
+Ошибка 2013: Lost connection to MySQL server during query говорит о том, что соединение с сервером было разорвано в процессе ожидания результата запроса. Это может быть связано либо с падением сервера, либо с таймаутом соединения из-за возросшей нагрузки. Надо проверить оба варианта. Но факты, что по условиям задачи 1) частота этих проблем растёт с ростом нагрузки, и 2) т.к. гис-система, вероятно, объем возвращаемых данных по каждому запросу велик - говорят в пользу таймаутов соединения. Я бы попробовал увеличить net_read_timeout и connect_timeout.
+
+## 4
+Сообщение postmaster invoked oom-killer означает, что на сервере исчерпалась память и linux-механизм OOM Killer начал её принудительную очистку. Под раздачу попал процесс postmaster, принимающий входящие подключения клиентов СУБД, поэтому СУБД стала недоступной. Нужно разобраться в причинах исчерпания памяти - с помощью мониторинга или подручных средств (top, ps). Если это PostgreSQL её сжирает, то ограничить потребление им памяти, например, начать с анализа значений effective_cache_size и shared_buffers.
