--- a/13.1-homework.md
+++ b/13.1-homework.md
@@ -16,21 +16,25 @@
 Если система мониторинга уже построена, можно настроить в ней алерты на возникающие ошибки, и отправлять их отдельной группе пользователей, в которую добавить разработчиков.
 
 > Вы, как опытный SRE, сделали мониторинг, куда вывели отображения выполнения SLA=99% по http кодам ответов. Вычисляете этот параметр по следующей формуле: summ_2xx_requests/summ_all_requests. Данный параметр не поднимается выше 70%, но при этом в вашей системе нет кодов ответа 5xx и 4xx. Где у вас ошибка?
-
+<br>
 Не учли коды 3хх? 
 
 > Опишите основные плюсы и минусы pull и push систем мониторинга.
+<br>
 тип        |плюсы      |минусы
 -----------|-----------|-----------
 pull       |единое место настроек, более высокая достоверность собираемых данных, проще настраивать и отлаживать|более высокая нагрузка на сервер
 push       |проще реплицировать метрики в разные системы мониторинга, проще маршрутизировать метрики (разные метрики в разные места)|сложнее в настройке и сопровождении, не всегда клиент может инициировать подключение к серверу из соображений ИБ
 
 > Какие из ниже перечисленных систем относятся к push модели, а какие к pull? А может есть гибридные?
+<br>
 Prometheus - pull
 TICK - push
 Zabbix - pull/push
 VictoriaMetrics - push/pull
 Nagios - push
-
+<br>
+Скрин работающего стека TICK
 ![chronograph](/pictures/chronograph.png)
+Скрин метрик утилизации диска
 ![chronograph disk usage](/pictures/chronograph_diskusage.png)
