--- a/12.2-homework.md
+++ b/12.2-homework.md
@@ -1,6 +1,7 @@
 # 12.2 Базовые объекты K8s
 
 ## Pod echoserver
+![screen-1](/pictures/k8s-pods.png)
 [hello-world.yaml](/k8s/hello-world.yaml)
 
 ```
@@ -34,6 +35,7 @@ Request Body:
 ```
 
 ## Service netology-web
+![screen-2](/pictures/k8s-service.png)
 [netology-web.yaml](/k8s/netology-web.yaml)
 ```
 vmedvedev@ubundesk:~/devops20/k8s$ kubectl get svc
